2011-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-shell): Set "remote-shell" property also
	for alternative shells.
	(tramp-open-connection-setup-interactive-shell): Check, whether
	the shell is a busybox.
	(tramp-send-command): Don't suppress multiple prompts for
	busyboxes, it hurts.

2011-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-file-exists-command): Spelling fixes.
	(tramp-remote-coding-commands): Check "test -c /dev/stdout".  If
	failing, a regular file would be written otherwise.  Reported by
	Dmitry Kurochkin <dmitry.kurochkin@gmail.com>.
	(tramp-find-inline-encoding): Embed checks in parentheses.

2011-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Require 'cl.
	(tramp-enter-password): Remove it.  Move implementation ...
	(tramp-action-password): ... here.
	(tramp-make-tramp-temp-file, tramp-read-passwd)
	(tramp-clear-passwd, tramp-time-less-p, tramp-time-diff): Set
	tramp-autoload cookie.

2011-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-maybe-open-connection): Handle user
	interrupt.  (Bug#10187)

2011-11-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-save-ad-hoc-proxies): New defcustom.
	(tramp-completion-handle-file-name-all-completions): Fix an error
	when called from ido.

	* tramp-sh.el (tramp-compute-multi-hops): Save
	`tramp-default-proxies-alist' when requested.

2011-11-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-make-tramp-file-name)
	(tramp-get-completion-user-host): Remove optional arg HOP, not
	needed any longer.
	(tramp-completion-handle-file-name-all-completions): Handle hops.
	(tramp-completion-dissect-file-name): Use better local variable name.

2011-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Fix docstring.
	(tramp-completion-make-tramp-file-name)
	(tramp-get-completion-user-host): New optional arg HOP.