@@ -1,3 +1,14 @@
+2011-12-30  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
+	Move check for busybox ...
+	(tramp-find-shell): ... here.  Simplify implementation.
+	(tramp-remote-coding-commands): Make the test command an extra slot.
+	(tramp-find-inline-encoding): Cache the coding commands in the
+	process cache.  Apply test command on the remote side, if defined.
+	(tramp-get-inline-coding): Read connection properties from the
+	process cache.
+
 2011-12-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-find-shell): Set "remote-shell" property also
